--- a/Casablanca Hotel/src/casablanca/hotel/CasablancaHotelGUI.form
+++ b/Casablanca Hotel/src/casablanca/hotel/CasablancaHotelGUI.form
@@ -47,7 +47,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jTabbedPaneMenu" min="-2" pref="306" max="-2" attributes="0"/>
-              <EmptySpace pref="34" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -72,23 +72,44 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                      <Component id="jTextFieldName" max="32767" attributes="0"/>
-                                      <Component id="jTextFieldAddress" pref="113" max="32767" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                              <Component id="jTextFieldName" max="32767" attributes="0"/>
+                                              <Component id="jTextFieldAddress" pref="113" max="32767" attributes="0"/>
+                                          </Group>
+                                          <Component id="jTextFieldPhone" min="-2" pref="113" max="-2" attributes="0"/>
+                                          <Component id="jTextFieldCheckIn" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
+                                      </Group>
                                   </Group>
-                                  <Component id="jTextFieldPhone" min="-2" pref="113" max="-2" attributes="0"/>
-                                  <Component id="jTextFieldCheckIn" alignment="0" min="-2" pref="113" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="jButtonClearBooking" min="-2" pref="127" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
-                              <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jTextFieldCountry" min="-2" pref="113" max="-2" attributes="0"/>
-                                  <Component id="jTextFieldEmail" min="-2" pref="113" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="1" attributes="0">
-                                          <Component id="jTextFieldNights" alignment="1" min="-2" pref="113" max="-2" attributes="0"/>
-                                          <Component id="jTextFieldTravel" min="-2" pref="113" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="jTextFieldCountry" min="-2" pref="113" max="-2" attributes="0"/>
+                                          <Component id="jTextFieldEmail" min="-2" pref="113" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Group type="102" attributes="0">
+                                              <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="1" attributes="0">
+                                                  <Component id="jTextFieldNights" alignment="1" min="-2" pref="113" max="-2" attributes="0"/>
+                                                  <Component id="jTextFieldTravel" min="-2" pref="113" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                          <Group type="102" attributes="0">
+                                              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                                              <Component id="jLabelStatus" min="-2" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
                                       <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
@@ -108,8 +129,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jButtonSaveBooking" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="jLabelStatus" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace pref="10" max="32767" attributes="0"/>
@@ -142,14 +162,23 @@
                           <Component id="jTextFieldCheckIn" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jTextFieldNights" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButtonSaveBooking" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabelStatus" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabelPrice" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabelBookingNr" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="jLabelStatus" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabelPrice" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabelBookingNr" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="jButtonSaveBooking" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jButtonClearBooking" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -190,6 +219,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Travel Agency"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldTravelActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextFieldCheckIn">
               <Properties>
@@ -244,6 +276,14 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Booking Number"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="jButtonClearBooking">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Clear Booking"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonClearBookingActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
