--- a/Casablanca Hotel/src/casablanca/hotel/CasablancaHotelGUI.form
+++ b/Casablanca Hotel/src/casablanca/hotel/CasablancaHotelGUI.form
@@ -102,7 +102,7 @@
                                           <Group type="102" attributes="0">
                                               <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="1" attributes="0">
-                                                  <Component id="jTextFieldNights" alignment="1" min="-2" pref="113" max="-2" attributes="0"/>
+                                                  <Component id="jTextFieldCheckOutDate" alignment="1" min="-2" pref="113" max="-2" attributes="0"/>
                                                   <Component id="jTextFieldTravel" min="-2" pref="113" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
@@ -160,7 +160,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jTextFieldCheckIn" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTextFieldNights" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jTextFieldCheckOutDate" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
@@ -231,10 +231,13 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldCheckInActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextFieldNights">
+            <Component class="javax.swing.JTextField" name="jTextFieldCheckOutDate">
               <Properties>
-                <Property name="text" type="java.lang.String" value="No. of nights"/>
+                <Property name="text" type="java.lang.String" value="Check-Out "/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldCheckOutDateActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JRadioButton" name="jRadioButtonSingle">
               <Properties>
